Fix width overflow moment section

--- a/styles/css/moments.scss
+++ b/styles/css/moments.scss
@@ -29,9 +29,15 @@
 
 .moment {
   margin: 1rem auto;
-  width: 90%;
+  width: 100%;
   display: grid;
   grid-template-columns: 20% 5% 75%;
+
+  @media only screen and (max-width: 900px) {
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+
   .left {
     h2 {
       font-family: "Bebas Neue";
@@ -83,15 +89,19 @@
         text-align: center;
       }
     }
+    @media only screen and (max-width: 900px) {
+      padding-left: 0;
+    }
     .content {
       width: 100%;
-      margin-left: 0.5rem;
+      padding-left: 0.5rem;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       p {
-        font-size: 22px;
+        font-size: 20px;
       }
       @media only screen and (max-width: 900px) {
+        padding-left: 0rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -105,11 +115,6 @@
         }
       }
     }
-
-    @media only screen and (max-width: 900px) {
-      margin-top: 1rem;
-      padding-left: 0;
-    }
   }
 
   img {
@@ -118,10 +123,5 @@
     height: auto;
     object-fit: contain;
     margin: 5px;
-  }
-
-  @media only screen and (max-width: 900px) {
-    width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   }
 }
